# ACScenarioAI

./: .gitignore  README.md  agent_training.py  aircraft_carrier_scenario.py  aircraft_carrier_scenario_env.py  main.py  pyproject.toml  requirements.txt  scenario.json  setup.py  stay_awake.py
ac_carrier_scenario/: __init__.py  environment.py  setup.py
ac_carrier_scenario/ac_carrier_scenario/: __init__.py  environment.py
ac_carrier_scenario_api/: api.py  helpers.py
models/: best_model_zoo_config.yml  newer_zoo_config.yml
optimization_results/: agent_study_ideal.db  ideal_params_study-agent_study_ideal_25-trials-25000-TPE-None_1639978340-status-Completed.json  report_ACS-v0_1000-trials-50000-tpe-median_1639617365.csv  report_ACS-v0_300-trials-50000-tpe-median_1639761662.csv  report_agent_100-trials-25000-TPE-None_1639275282-status-Completed.csv  report_study-agent_study_2_100-trials-25000-TPE-None_1639556748-status-Completed.csv  report_study-agent_study_ideal_25-trials-25000-TPE-None_1639978340-status-Completed.csv
src/ac_carrier_scenario/ai/: agent_training.py  callbacks.py  trial_eval_callback.py
src/ac_carrier_scenario/api/: api.py  helpers.py
src/ac_carrier_scenario/common/: __init__.py  environment.py  main.py
src/ac_carrier_scenario/util/: stay_awake.py
